<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MainActivity strings -->
    <string name="app_name">BottlEmail 2.0</string>
    <string name="hello_world">Hello world!</string>
    <!-- tab names -->
    <string name="title_section1">In der Nähe</string>
    <string name="title_section2">Flaschenregal</string>
    <string name="unknown_device">Unbekannt</string>
    <!-- Bluetooth messages -->
    <string name="toast_activeBluetooth">Bluetooth aktiviert (Dummy Text)</string>
    <string name="toast_bluetooth_not_supported">Bluetooth is not supported!</string>
    <string name="toast_ble_not_supported">BLE is not supported!</string>
    <string name="toast_bluetooth_not_enabled">Bluetooth is not enabled!</string>
    <string name="toast_scanning_ble">Scanning&#8230;</string>
    <!-- Webservice messages -->
    <string name="toast_ws_not_enabled">No network connection!</string>

    <!-- BottleDetails strings -->
    <string name="title_activity_bottle_details">BottleDetails</string>
    <string name="action_subtitle_compose">Verfassen Sie Ihre Flaschenpost</string>
    <string name="tv_bottleid">FlaschenID: </string>
    <string name="tv_mac">FlaschenMac: </string>
    <string name="tv_data">Daten: </string>
    <string name="tv_delete_timestamp">Nachricht gelöscht</string>
    <string name="btn_show_message">Nachrichten</string>
    <string name="btn_send_message">Sende</string>
    <string name="btn_show_map">Karte</string>
    <string name="gatt_state">State: </string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">No data</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    	<!-- Alert Dialog -->
    <string name="alert_title_no_internet_conn">Kein Internetzugang</string>
    <string name="alert_body_no_internet_conn">Du bist nicht mit dem 
        Internet verbunden. Möchtest du es jetzt aktivieren?</string>
    <string name="alert_btn_okay">Okay</string>
    <string name="alert_btn_accept">Akzeptieren</string>
    <string name="alert_btn_close">Schließen</string>

    <!-- MessageActivity strings -->
    <string name="title_activity_message">Nachrichten-Ansicht</string>
    <string name="subtitle_activity_message">Flaschennachrichten</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_test">Test</string>
    <string name="menu_create">Flasche basteln</string>
    
    <string name="menu_get">Hole mehr!</string>
    
    <!-- SettingsActivity strings -->
    <string name="title_activity_settings">Einstellungen</string>
<<<<<<< HEAD
    	<!-- Precision preferences items -->
    <string name="pref_prec_dialogtitle">Precision</string>
    <string name="pref_prec_def">Exactly</string>   
    <string name="pref_prec_summary">Select your precision of localization.</string>
    <string name="pref_prec_title">Select your precision</string>
=======
>>>>>>> 46b21e8ad200c9f5be2f318c3a935876212da03b
    	<!-- Username preferences items -->
    <string name="pref_user_dialogtitle">Username</string>
    <string name="pref_user_def">Sterni</string>
    <string name="pref_user_title">Username</string>
    <string name="pref_user_summary">Please put in your username.</string>
    	<!-- Connection preferences items -->
    <string name="pref_conn_dialogtitle">Connection services</string>
    <string name="pref_conn_def">both</string>
    <string name="pref_conn_title">Connection services</string>
    <string name="pref_conn_summary">Please select your preferred connection services.</string>

    <string-array name="pref_conn_array">
        <item>Both</item>
        <item>Only Bluetooth LE</item>
        <item>Only Internet</item>
        <item>Nothing</item>
    </string-array>
    <string-array name="pref_conn_array_values">
        <item>3</item> 
        <item>2</item> 
        <item>1</item> 
        <item>0</item> 
    </string-array>
    
    	<!-- Precision preferences items -->
    <string name="pref_prec_dialogtitle">Precision</string>
    <string name="pref_prec_def">Exactly</string>
    <string name="pref_prec_summary">Select your precision of localization.</string>
    <string name="pref_prec_title">Select your precision</string>

    <string-array name="pref_prec_array">
        <item>Exactly</item>
        <item>Street</item>
        <item>City</item>
        <item>Region</item>
        <item>Country</item>
        <item>Invisible</item>
    </string-array>
    <string-array name="pref_prec_array_values">
        <item>6</item> <!-- n -->
        <item>2</item> <!-- digits -->
        <item>1</item> <!-- after -->
        <item>0</item> <!-- notation -->
        <item>10</item>	<!-- just a marker because here we use a modulo 10 computation -->
        <item>@string/invisible</item> <!-- invisible symbol = -1 -->
    </string-array>
    <string name="invisible">-1</string>

</resources>
