<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_prec_title">
        <EditTextPreference 
            android:defaultValue="@string/pref_user_def"
            android:dialogTitle="@string/pref_user_dialogtitle"
            android:title="@string/pref_user_title"
            android:key="username_preference"
            android:summary="@string/pref_user_summary"
            android:persistent="true"/>
        
        <ListPreference 
            android:defaultValue="@string/pref_prec_def"
            android:dialogTitle="@string/pref_prec_dialogtitle"
            android:entries="@array/pref_prec_array"
            android:entryValues="@array/pref_prec_array_values"
            android:key="precision_preference"
            android:summary="@string/pref_prec_summary"
            android:title="@string/pref_prec_title"
            android:persistent="true"/>
        
    </PreferenceCategory>
    
</PreferenceScreen>
