<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
       	android:showAsAction="never"/>
    <!-- item android:id="@+id/menu_refresh"
          android:checkable="false"
          android:orderInCategory="1"
          android:showAsAction="ifRoom"/> -->
    <item android:id="@+id/menu_scan"
          android:title="@string/menu_scan"
          android:orderInCategory="100"
          android:visible="false"
          android:showAsAction="ifRoom|withText"/> <!-- "ifRoom|withText"/> -->
    <item android:id="@+id/menu_stop"
          android:title="@string/menu_stop"
          android:orderInCategory="101"
          android:showAsAction="ifRoom|withText"/> <!-- "ifRoom|withText"/> -->
    <item android:id="@+id/menu_test"
          android:title="@string/menu_test"
          android:orderInCategory="102"
          android:showAsAction="never|withText"/> <!-- "ifRoom|withText"/> -->
    <item android:id="@+id/menu_createBottle"
          android:title="@string/menu_create"
          android:orderInCategory="103"
          android:showAsAction="never|withText"/> <!-- "ifRoom|withText"/> -->
</menu>
