<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="90dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_bottleid"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_mac"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gatt_state"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_data"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_bottle_id_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_mac_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/conn_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/data_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:inputType="textLongMessage"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/btn_sendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sendMessage"
            android:text="@string/btn_send_message"
            android:textSize="15sp"
            android:typeface="normal"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_getMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showMessage"
            android:text="@string/btn_show_message"
            android:textSize="15sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_showMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showLocationOnMap"
            android:text="@string/btn_show_map"
            android:textSize="15sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/list_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ExpandableListView>

</LinearLayout>